# Dissertation

./: .gitignore  README.md  pyproject.toml  requirements.lock.txt
scripts/: compare_stats.py  compare_stats3.py  debug_espeak.py  eval_coverage.py  experiment_config.json  export_tables.py  make_frontend_suite.py  prepare_dataset.py  run_all_experiments.py  run_benchmark.py  run_compare.py  run_compare3.py  sample_cases.py  sample_cases3.py
src/pyttsfrontend/: __init__.py  cli.py  pipeline.py  schema.py
src/pyttsfrontend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyttsfrontend/baselines/: num2words_only.py  phonemizer_only.py
src/pyttsfrontend/components/: normalizer.py  spacy_nlp.py
src/pyttsfrontend/phonemes/: arpabet.py  ipa.py
