[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyttsfrontend"
version = "0.1.0"
description = "A modular TTS text-processing frontend with ARPAbet and IPA outputs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "spacy>=3.7",
  "num2words>=0.5",
  "cmudict>=1.0",
  "phonemizer>=3.2",
  "pydantic>=2.6",
  "rich>=13.7"
]

[project.scripts]
pyttsfrontend = "pyttsfrontend.cli:main"
pyttsfrontend-batch = "pyttsfrontend.cli:batch_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
